--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "jasny-bootstrap": "~3.1.3"
+    "jasny-bootstrap": "~3.1.3",
+    "angular-material": "^0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
