--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "jasny-bootstrap": "~3.1.3",
-    "angular-material": "^0.11.2"
+    "angular-material": "^0.11.2",
+    "angular-material-data-table": "~0.8.14",
+    "angular-material-icons": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
