--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "jasny-bootstrap": "~3.1.3",
     "angular-material": "^0.11.2",
     "angular-material-data-table": "~0.8.14",
-    "angular-material-icons": "~0.6.0"
+    "angular-material-icons": "~0.6.0",
+    "lodash": "~3.10.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
