--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-material": "^0.11.2",
     "angular-material-data-table": "~0.8.14",
     "angular-material-icons": "~0.6.0",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "restangular": "~1.5.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
