--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-material-data-table": "~0.8.14",
     "angular-material-icons": "~0.6.0",
     "lodash": "~3.10.1",
-    "restangular": "~1.5.1"
+    "restangular": "~1.5.1",
+    "ngmap": "~1.13.14"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
