--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-material-icons": "~0.6.0",
     "lodash": "~3.10.1",
     "restangular": "~1.5.1",
-    "ngmap": "~1.13.14"
+    "ngmap": "~1.13.14",
+    "node-sass": "~3.3.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
