--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-karma": "^0.12.0",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^1.0.0",
+    "grunt-ng-constant": "^1.1.0",
     "grunt-sass": "^1.0.0",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
