--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
-  "appPath": "app",
+  "appPath": "src",
   "moduleName": "frontendApp",
   "overrides": {
     "bootstrap": {
