--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,10 @@
     "lodash": "~3.10.1",
     "restangular": "~1.5.1",
     "ngmap": "~1.13.14",
-    "node-sass": "~3.3.3"
+    "node-sass": "~3.3.3",
+    "traverson": "~3.1.0",
+    "traverson-hal": "~4.1.1",
+    "traverson-angular": "~3.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
