init new app architecture migrated from tsd to typings. (tsd = deprecated) added basic webpack config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
     "outDir": "out"
   },
   "exclude": [
+    "src",
     "node_modules",
     "typings/main.d.ts",
-    "typings/main",
+    "typings/main"
   ],
   "version": "1.7.5"
 }
