--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.0",
     "grunt-concurrent": "^2.0.0",
@@ -28,19 +30,33 @@
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "html-webpack-plugin": "^2.9.0",
+    "imports-loader": "^0.6.5",
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^2.0.0",
     "karma": "^0.13.0",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.2.0",
     "load-grunt-tasks": "^3.1.0",
+    "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
-    "time-grunt": "^1.0.0"
+    "resolve-url-loader": "^1.4.3",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "time-grunt": "^1.0.0",
+    "ts-loader": "^0.8.1",
+    "typescript": "^1.8.2",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   },
   "engines": {
     "node": ">=4.2.1"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "typings": "typings install",
+    "dev-webp": "webpack --config webpack/dev.config.js",
+    "dev": "webpack-dev-server --config webpack/dev.config.js --content-base public/dev --inline"
   }
 }
