--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "phantomjs": "^1.9.18",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
+    "restangular": "^1.5.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "time-grunt": "^1.0.0",
