--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "frontend",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "angular-ui-router": "^0.2.18"
+  },
   "repository": {},
   "devDependencies": {
     "css-loader": "^0.23.1",
