--- a/package.json
+++ b/package.json
@@ -1,44 +1,32 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "jworks-360-front-end-webpack",
+  "version": "0.1.2",
   "dependencies": {
+    "angular": "^1.5.0",
+    "angular-mocks": "^1.5.0",
     "angular-ui-router": "^0.2.18"
   },
   "repository": {},
   "devDependencies": {
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^3.0.0",
-    "grunt-concurrent": "^2.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.10.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.5.0",
-    "grunt-contrib-imagemin": "^0.8.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.9.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^2.1.2",
-    "grunt-google-cdn": "^0.4.3",
-    "grunt-karma": "^0.12.0",
-    "grunt-newer": "^1.1.0",
-    "grunt-ng-annotate": "^1.0.0",
-    "grunt-ng-constant": "^1.1.0",
-    "grunt-sass": "^1.0.0",
-    "grunt-svgmin": "^2.0.0",
-    "grunt-usemin": "^3.0.0",
-    "grunt-wiredep": "^2.0.0",
     "html-webpack-plugin": "^2.9.0",
     "imports-loader": "^0.6.5",
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^2.0.0",
-    "karma": "^0.13.0",
+    "karma": "^0.13.21",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.2.0",
+    "istanbul": "0.4.2",
+    "istanbul-instrumenter-loader": "0.1.3",
+    "jasmine": "2.4.1",
+    "karma-coverage": "0.5.3",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-spec-reporter": "0.0.23",
+    "karma-typescript-preprocessor": "0.0.21",
+    "karma-webpack": "1.7.0",
+    "phantomjs-polyfill": "0.0.1",
+    "phantomjs-prebuilt": "2.1.3",
     "load-grunt-tasks": "^3.1.0",
     "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
@@ -58,9 +46,10 @@
     "node": ">=4.2.1"
   },
   "scripts": {
-    "test": "",
+    "postinstall":"typings i",
+    "test": "karma start --NODE_ENV=test",
     "typings": "typings install",
-    "build" : "webpack --config webpack/build.config.js",
+    "build": "webpack --config webpack/build.config.js",
     "dev-webp": "webpack --config webpack/dev.config.js",
     "dev": "webpack-dev-server --config webpack/dev.config.js --content-base public/dev --inline"
   }
