--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-mocks": "^1.5.0",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "jquery": "^2.2.1"
   },
   "repository": {},
   "devDependencies": {
@@ -46,7 +47,7 @@
     "node": ">=4.2.1"
   },
   "scripts": {
-    "postinstall":"typings i",
+    "postinstall": "typings i",
     "test": "karma start --NODE_ENV=test",
     "typings": "typings install",
     "build": "webpack --config webpack/build.config.js",
