--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.2",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "angular-aria": "^1.5.0",
+    "angular-material": "^1.0.6",
     "angular-mocks": "^1.5.0",
     "angular-ui-router": "^0.2.18",
     "jquery": "^2.2.1"
