added profile menu component, added profile summary component, refactored profilestate

--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ memory: 64M
 instances: 1
 applications:
 - name: frontend-oraj360
-  path: dist/
+  path: build/
   buildpack: https://github.com/cloudfoundry/staticfile-buildpack.git
   timeout: 120
