--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "angular-material": "^1.0.6",
     "angular-mocks": "^1.5.0",
     "angular-ui-router": "^0.2.18",
-    "jquery": "^2.2.1"
+    "jquery": "^2.2.1",
+    "vis": "^4.15.0"
   },
   "repository": {},
   "devDependencies": {
