--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
     "angular-material": "^1.0.6",
+    "angular-messages": "^1.5.0",
     "angular-mocks": "^1.5.0",
     "angular-ui-router": "^0.2.18",
     "gsap": "^1.18.2",
+    "html-loader": "^0.4.3",
     "jquery": "^2.2.1",
     "vis": "^4.15.0"
   },
