--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gsap": "^1.18.2",
     "html-loader": "^0.4.3",
     "jquery": "^2.2.1",
+    "json-loader": "^0.5.4",
     "vis": "^4.15.0"
   },
   "repository": {},
