--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "angular-mocks": "^1.5.0",
     "angular-ui-router": "^0.2.18",
     "gsap": "^1.18.2",
+    "handlebars": "^4.0.5",
+    "handlebars-template-loader": "^0.5.7",
     "html-loader": "^0.4.3",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
