--- a/package.json
+++ b/package.json
@@ -19,28 +19,29 @@
   },
   "repository": {},
   "devDependencies": {
+    "babel-core": "^6.6.5",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.9.0",
     "imports-loader": "^0.6.5",
-    "jasmine-core": "^2.2.0",
-    "jshint-stylish": "^2.0.0",
-    "karma": "^0.13.21",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.2.0",
     "istanbul": "0.4.2",
     "istanbul-instrumenter-loader": "0.1.3",
     "jasmine": "2.4.1",
+    "jasmine-core": "^2.2.0",
+    "jshint-stylish": "^2.0.0",
+    "karma": "^0.13.21",
     "karma-coverage": "0.5.3",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.23",
     "karma-typescript-preprocessor": "0.0.21",
     "karma-webpack": "1.7.0",
-    "phantomjs-polyfill": "0.0.1",
-    "phantomjs-prebuilt": "2.1.3",
     "load-grunt-tasks": "^3.1.0",
     "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
+    "phantomjs-polyfill": "0.0.1",
+    "phantomjs-prebuilt": "2.1.3",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
     "restangular": "^1.5.2",
@@ -50,6 +51,7 @@
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.2",
     "url-loader": "^0.5.7",
+    "wallaby-webpack": "0.0.16",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
