--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "angular-material": "^1.0.6",
     "angular-messages": "^1.5.0",
     "angular-mocks": "^1.5.0",
+    "angular-moment": "^1.0.0-beta.4",
     "angular-ui-router": "^0.2.18",
     "gsap": "^1.18.2",
     "handlebars": "^4.0.5",
@@ -15,6 +16,7 @@
     "html-loader": "^0.4.3",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
+    "moment": "^2.12.0",
     "vis": "^4.15.0"
   },
   "repository": {},
