--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
     "moment": "^2.12.0",
+    "traverson": "^3.1.3",
     "traverson-angular": "^3.1.1",
+    "traverson-hal": "^4.1.1",
     "vis": "^4.15.0"
   },
   "repository": {},
