--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "repository": {},
   "devDependencies": {
     "babel-core": "^6.6.5",
+    "coveralls": "^2.11.8",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.9.0",
