Create mood component

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
+    "angular-chartist.js": "^3.3.13",
     "angular-material": "^1.0.6",
     "angular-messages": "^1.5.0",
     "angular-mocks": "^1.5.0",
     "angular-moment": "^1.0.0-beta.4",
     "angular-ui-router": "^0.2.18",
+    "chartist": "^0.9.7",
     "gsap": "^1.18.2",
     "handlebars": "^4.0.5",
     "handlebars-template-loader": "^0.5.7",
