--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
 - 4.2.1
 sudo: false
 install:
+- npm config set unsafe-perm true
 - npm install -g npm
 - npm install -g webpack
 - npm install -g typings
