--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - 4.2.1
 sudo: false
 install:
-- npm config set strict-ssl false
+- npm cache clean
 - npm install -g npm
 - npm install -g webpack
 - npm install -g typings
