--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma": "^0.13.21",
     "karma-coverage": "0.5.3",
     "karma-jasmine": "^0.3.5",
+    "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.23",
