--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "angular-messages": "^1.5.0",
     "angular-mocks": "^1.5.0",
     "angular-moment": "^1.0.0-beta.4",
-    "angular-ui-router": "^0.2.18",
+    "angular-ui-router": "^1.0.0-alpha.1",
     "chartist": "^0.9.7",
     "gsap": "^1.18.2",
     "handlebars": "^4.0.5",
-    "handlebars-template-loader": "^0.5.7",
+    "handlebars-template-loader": "^0.6.0",
     "html-loader": "^0.4.3",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
@@ -34,23 +34,22 @@
     "html-webpack-plugin": "^2.9.0",
     "imports-loader": "^0.6.5",
     "istanbul": "0.4.2",
-    "istanbul-instrumenter-loader": "0.1.3",
+    "istanbul-instrumenter-loader": "0.2.0",
     "jasmine": "2.4.1",
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^2.0.0",
     "karma": "^0.13.21",
-    "karma-coverage": "0.5.3",
+    "karma-coverage": "0.5.5",
     "karma-jasmine": "^0.3.5",
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.23",
     "karma-typescript-preprocessor": "0.0.21",
     "karma-webpack": "1.7.0",
     "load-grunt-tasks": "^3.1.0",
     "node-sass": "^3.4.2",
-    "phantomjs-polyfill": "0.0.1",
-    "phantomjs-prebuilt": "2.1.3",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "2.1.7",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
     "restangular": "^1.5.2",
@@ -60,7 +59,7 @@
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.2",
     "url-loader": "^0.5.7",
-    "wallaby-webpack": "0.0.16",
+    "wallaby-webpack": "0.0.21",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
