--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: node_js
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 node_js:
 - 4.2.1
 sudo: false
 install:
 - npm install -g npm
+- npm install -g protractor
+- webdriver-manager update
+- webdriver-manager start
+- npm install -g codeceptjs
 - npm install -g webpack
 - npm install -g typings
 - npm install
