--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ deploy:
     repo: Ordineo/front-end
     branch: master
 after_deploy:
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
+- sleep 3 # give xvfb some time to starts
 - codeceptjs run --steps --debug
 - cat ./reports/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 notifications:
