--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,20 @@
 language: node_js
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
 node_js:
 - 4.2.1
 sudo: false
 install:
 - npm install -g npm
 - npm install -g protractor
-- webdriver-manager update --standalone
-- webdriver-manager start 2>&1 &
 - npm install -g codeceptjs
 - npm install -g webpack
 - npm install -g typings
 - npm install
 - npm run build
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 after_success:
-- "export DISPLAY=:99.0"
-- "sh -e /etc/init.d/xvfb start"
-- sleep 3 # give xvfb some time to starts
 - codeceptjs run --steps --debug
 deploy:
   edge: true
@@ -34,6 +29,10 @@ deploy:
     repo: Ordineo/front-end
     branch: master
 after_deploy:
+- webdriver-manager update --standalone --firefox
+- webdriver-manager start 2>&1 &
+- echo YOHOHOHO
+- echo $DISPLAY
 - codeceptjs run --steps --debug
 - cat ./reports/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 notifications:
