--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,13 @@ install:
 - npm install
 - npm run build
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  - "export DISPLAY=:0"
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
   - sleep 3 # give xvfb some time to start
 after_success:
+- "export DISPLAY=:0"
+- "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+- sleep 3 # give xvfb some time to start
 - codeceptjs run --steps --debug
 deploy:
   edge: true
