--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_script:
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
   - sleep 3 # give xvfb some time to start
 after_success:
+- webdriver-manager update --standalone --firefox
+- webdriver-manager start 2>&1 &
 - "export DISPLAY=:0"
 - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 - sleep 3 # give xvfb some time to start
