--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-typescript-preprocessor": "0.0.21",
     "karma-webpack": "1.7.0",
     "load-grunt-tasks": "^3.1.0",
+    "ng-file-upload": "^12.0.4",
     "node-sass": "^3.4.2",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.7",
