--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ node_js:
 sudo: false
 install:
 - npm install
-- npm run build
+- npm run webdriver:update
 before_script:
 - "export DISPLAY=:99.0"
 - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 - sleep 3 # give xvfb some time to start
-- webdriver-manager update --standalone --firefox
-- webdriver-manager start 2>&1 &
+- npm run webdriver:start
+before_deploy:
+- npm run build
 deploy:
   edge: true
   provider: cloudfoundry
@@ -24,7 +25,7 @@ deploy:
     repo: Ordineo/front-end
     branch: master
 after_deploy:
-- npm run e2e:test
+- npm run test:e2e
 - cat ./reports/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 notifications:
   slack:
