--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-sass": "^3.4.2",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.7",
+    "protractor": "^3.2.2",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.1.2",
