--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   "scripts": {
     "postinstall": "typings i",
     "build": "webpack --config webpack/build.config.js",
-    "start": "webpack-dev-server --config webpack/dev.config.js --inline --content-base src/",
+    "start": "webpack-dev-server --config webpack/dev.config.js --inline --content-base src/ &",
     "test": "npm run test:karma && npm run test:e2e",
     "test:karma": "karma start --NODE_ENV=test",
     "watch:test": "karma start --auto-watch --no-single-run --NODE_ENV=test",
