--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "test:karma": "karma start --NODE_ENV=test",
     "watch:test": "karma start --auto-watch --no-single-run --NODE_ENV=test",
     "webdriver:update": "webdriver-manager update --standalone --firefox",
-    "webdriver:start": "webdriver-manager start 2>&1 &",
+    "webdriver:start": "webdriver-manager start > webdriver-output 2>&1 &",
     "test:e2e": "codeceptjs run --steps --debug"
   }
 }
