--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_script:
 - sleep 3 # give xvfb some time to start
 - npm run webdriver:start
 - npm start
+after_succes:
+- mv ./webdriver-output /dev/null
 before_deploy:
 - npm run build
 deploy:
@@ -26,7 +28,11 @@ deploy:
     repo: Ordineo/front-end
     branch: master
 after_deploy:
+- mv ./codecept.json ./codecept-local.json
+- mv ./codecept-remote.json ./codecept.json
 - npm run test:e2e
+- mv ./codecept.json ./codecept-remote.json
+- mv ./codecept-local.json ./codecept.json
 - cat ./reports/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 notifications:
   slack:
