--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jworks-360-front-end-webpack",
   "version": "0.1.2",
   "dependencies": {
+    "@angular/router": "^0.2.0",
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
