--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
     "angular-aria": "^1.5.0",
+    "angular-jwt": "0.0.9",
     "angular-material": "^1.0.6",
     "angular-messages": "^1.5.0",
     "angular-mocks": "^1.5.0",
