--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "json-loader": "^0.5.4",
     "karma": "^0.13.21",
     "karma-coverage": "0.5.5",
+    "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.5",
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
