--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "ts-loader": "^0.8.1",
+    "tslint": "^3.10.2",
+    "tslint-loader": "^2.1.4",
     "typescript": "^1.8.2",
     "typings": "^0.7.12",
     "url-loader": "^0.5.7",
