--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "scripts": {
     "postinstall": "typings i",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "webpack --config webpack/build.config.js",
     "start": "webpack-dev-server --config webpack/dev.config.js --inline --content-base src/ &",
     "test": "npm run test:karma && npm run test:e2e",
