--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "protractor": "^3.2.2",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
+    "rxjs": "^5.0.0-beta.8",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "ts-loader": "^0.8.1",
