--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.0.21",
     "karma-webpack": "1.7.0",
+    "lodash": "^4.13.1",
     "ng-file-upload": "^12.0.4",
     "node-sass": "^3.4.2",
     "phantomjs-polyfill": "0.0.2",
